Complete fixes for BZ 69135 - prevent escape from /META-INF/tags/

--- a/java/org/apache/jasper/resources/LocalStrings.properties
+++ b/java/org/apache/jasper/resources/LocalStrings.properties
@@ -91,6 +91,7 @@ jsp.error.invalid.directive=Invalid directive
 jsp.error.invalid.expression=[{0}] contains invalid expression(s): [{1}]
 jsp.error.invalid.implicit=Invalid implicit TLD for tag file at [{0}]
 jsp.error.invalid.implicit.version=Invalid JSP version defined in implicit TLD for tag file at [{0}]
+jsp.error.invalid.includeInTagFileJar=The include [{0}] is not valid since it is outside of /META-INF/tags in the current JAR
 jsp.error.invalid.name=File [{0}] uses name [{1}] in jsp:getProperty for a bean that was not previously introduced as per JSP.5.3
 jsp.error.invalid.scope=Illegal value of ''scope'' attribute: [{0}] (must be one of "page", "request", "session", or "application")
 jsp.error.invalid.tagdir=Tag file directory [{0}] does not start with "/WEB-INF/tags"
