Add tag fragments to known text file extensions
This fixes cross-platform repeatable builds. The source bundles ended up
with mis-matched line endings.

--- a/build.xml
+++ b/build.xml
@@ -352,6 +352,7 @@
     <include name="**/*.shtml"/>
     <include name="**/*.svg"/>
     <include name="**/*.tag"/>
+    <include name="**/*.tagf"/>
     <include name="**/*.tagx"/>
     <include name="**/*.tasks"/>
     <include name="**/*.tld"/>
