--- a/build.xml
+++ b/build.xml
@@ -2850,6 +2850,13 @@ asf.ldap.username=${release.asfusername}
                  byline="true"
                   match="&lt;section name=&quot;Tomcat ${version.major}.${version.minor}.${version.build}${version.suffix} \([^)]*\).*&gt;"
                 replace="&lt;section name=&quot;Tomcat ${version.major}.${version.minor}.${version.build}${version.suffix} \(${release.asfusername}\)&quot; rtext=&quot;&quot;&gt;" />
+
+    <echo>=====
+
+Configured for ${release.asfusername} to release Tomcat ${version.major}.${version.minor}.${version.build}${version.suffix} using Java ${java.vm.version} and ant ${antversion}
+
+=====
+</echo>
   </target>
 
   <target name="release"
