Add FFM classes and build
A separate javac 22+ is needed for release to compile the FFM classes.
Java 17 or 21 is also needed for release, preserving Java 8 runtime
capability.

--- a/build.xml
+++ b/build.xml
@@ -140,6 +140,7 @@
   <property name="catalina-ant.jar" value="${tomcat.build}/lib/catalina-ant.jar"/>
   <property name="catalina-storeconfig.jar" value="${tomcat.build}/lib/catalina-storeconfig.jar"/>
   <property name="tomcat-coyote.jar" value="${tomcat.build}/lib/tomcat-coyote.jar"/>
+  <property name="tomcat-coyote-ffm.jar" value="${tomcat.build}/lib/tomcat-coyote-ffm.jar"/>
   <property name="tomcat-dbcp.jar" value="${tomcat.build}/lib/tomcat-dbcp.jar"/>
   <property name="tomcat-jni.jar" value="${tomcat.build}/lib/tomcat-jni.jar"/>
   <property name="tomcat-api.jar" value="${tomcat.build}/lib/tomcat-api.jar"/>
@@ -168,6 +169,7 @@
   <property name="catalina-storeconfig-src.jar" value="${tomcat.src.jars}/catalina-storeconfig-src.jar"/>
   <property name="tomcat-jni-src.jar" value="${tomcat.src.jars}/tomcat-jni-src.jar"/>
   <property name="tomcat-coyote-src.jar" value="${tomcat.src.jars}/tomcat-coyote-src.jar"/>
+  <property name="tomcat-coyote-ffm-src.jar" value="${tomcat.src.jars}/tomcat-coyote-ffm-src.jar"/>
   <property name="tomcat-dbcp-src.jar" value="${tomcat.src.jars}/tomcat-dbcp-src.jar"/>
   <property name="tomcat-api-src.jar" value="${tomcat.src.jars}/tomcat-api-src.jar"/>
   <property name="tomcat-util-src.jar" value="${tomcat.src.jars}/tomcat-util-src.jar"/>
@@ -752,6 +754,12 @@
     <include name="org/apache/tomcat/util/log/**" />
     <include name="org/apache/tomcat/util/modeler/**" />
     <include name="org/apache/tomcat/util/net/**" />
+    <exclude name="org/apache/tomcat/util/net/openssl/panama/**"/>
+  </patternset>
+
+  <patternset id="files.tomcat-coyote-ffm">
+    <include name="org/apache/tomcat/util/net/openssl/panama/**"/>
+    <include name="org/apache/tomcat/util/openssl/**"/>
   </patternset>
 
   <patternset id="files.jasper">
@@ -889,6 +897,7 @@
         <exclude name="java/org/apache/el/parser/ELParser*.java" />
         <exclude name="java/org/apache/el/parser/Node.java" />
         <exclude name="java/org/apache/tomcat/util/json/JSONParser*.java" />
+        <exclude name="java/org/apache/tomcat/util/openssl/*.java" />
         <exclude name="**/*.jj" />
         <exclude name="java/org/apache/**/JJT*ParserState.java" />
         <exclude name="java/org/apache/**/ParseException.java" />
@@ -1007,6 +1016,27 @@
       <compilerarg value="-Xlint:unchecked"/>
       -->
       <classpath refid="compile.classpath" />
+      <exclude name="org/apache/tomcat/util/net/openssl/panama/**"/>
+      <exclude name="org/apache/tomcat/util/openssl/**"/>
+    </javac>
+    <!-- Compile internal server components that use FFM -->
+    <condition property="has-ffm">
+      <isset property="java25.home" />
+    </condition>
+    <javac srcdir="java" destdir="${tomcat.classes}"
+           debug="${compile.debug}"
+           deprecation="${compile.deprecation}"
+           release="22"
+           encoding="ISO-8859-1"
+           includeAntRuntime="true"
+           fork="true" executable="${java25.home}/bin/javac"
+           if:set="has-ffm" >
+      <!-- Uncomment this to show unchecked warnings:
+      <compilerarg value="-Xlint:unchecked"/>
+      -->
+      <classpath refid="compile.classpath" />
+      <include name="org/apache/tomcat/util/net/openssl/panama/**"/>
+      <include name="org/apache/tomcat/util/openssl/**"/>
     </javac>
     <!-- Copy static resource files -->
     <copy todir="${tomcat.classes}" encoding="UTF-8">
@@ -1154,6 +1184,13 @@
     <jarIt jarfile="${tomcat-coyote.jar}"
       filesDir="${tomcat.classes}"
       filesId="files.tomcat-coyote"
+      addOSGi="true" />
+
+    <!-- OpenSSL FFM - Coyote -->
+    <jarIt jarfile="${tomcat-coyote-ffm.jar}"
+      filesDir="${tomcat.classes}"
+      filesId="files.tomcat-coyote-ffm"
+      manifest="${tomcat.manifests}/tomcat-coyote-ffm.jar.manifest"
       addOSGi="true" />
 
     <!-- WebSocket implementation JAR File -->
@@ -2847,6 +2884,10 @@ Configured for ${release.asfusername} to release Tomcat ${version.major}.${versi
         <not><javaversion atleast="${release.java.version}" /></not>
       </condition>
     </fail>
+    <condition property="no-ffm">
+      <not><isset property="${java25.home}" /></not>
+    </condition>
+    <echo level="error" if:set="no-ffm">JAVAC VERSION 22 OR NEWER IS REQUIRED FOR RELEASE (java25.home property is set to ${java25.home})</echo>
   </target>
 
   <target name="gpg-init-1">
@@ -3263,6 +3304,11 @@ Configured for ${release.asfusername} to release Tomcat ${version.major}.${versi
     <jarIt jarfile="${tomcat-coyote-src.jar}"
       filesDir="java"
       filesId="files.tomcat-coyote" />
+
+    <!-- Protocol handlers - Coyote OpenSSL FFM -->
+    <jarIt jarfile="${tomcat-coyote-ffm-src.jar}"
+      filesDir="java"
+      filesId="files.tomcat-coyote-ffm" />
 
     <!-- WebSocket implementation JAR File -->
     <jarIt jarfile="${tomcat-websocket-src.jar}"
