--- a/java/org/apache/catalina/core/LocalStrings.properties
+++ b/java/org/apache/catalina/core/LocalStrings.properties
@@ -178,6 +178,11 @@ naming.wsdlFailed=Failed to find wsdl file: [{0}]
 
 noPluggabilityServletContext.notAllowed=Section 4.4 of the Servlet 3.0 specification does not permit this method to be called from a ServletContextListener that was not defined in web.xml, a web-fragment.xml file nor annotated with @WebListener
 
+openssllistener.destroy=OpenSSL shutdown failed
+openssllistener.initializeFIPSFailed=Failed entering FIPS mode
+openssllistener.java22=The FFM API from Java 22 is not available, using OpenSSL requires Apache Tomcat Native
+openssllistener.sslInit=OpenSSL initialization failed
+
 propertiesRoleMappingListener.linkedRole=Successfully linked application role [{0}] to technical role [{1}]
 propertiesRoleMappingListener.linkedRoleCount=Linked [{0}] application roles to technical roles
 propertiesRoleMappingListener.roleMappingFileEmpty=Role mapping file cannot be empty
