Additional logging to help debug a GitHub action failure

--- a/java/org/apache/tomcat/websocket/LocalStrings.properties
+++ b/java/org/apache/tomcat/websocket/LocalStrings.properties
@@ -109,6 +109,8 @@ wsRemoteEndpoint.tooMuchData=Ping or pong may not send more than 125 bytes
 wsRemoteEndpoint.writeTimeout=Blocking write timeout
 wsRemoteEndpoint.wrongState=The remote endpoint was in state [{0}] which is an invalid state for called method
 
+wsRemoteEndpointClient.writeFailed=Write to the remote endpoint failed. The timeout passed to this method was [{0}] and the timeout used for the write was [{1}]
+
 # Note the following messages are used as a close reason in a WebSocket control
 # frame and therefore must be 123 bytes (not characters) or less in length.
 # Messages are encoded using UTF-8 where a single character may be encoded in
