Add JreCompat support for Subject.callAs()
With the changes coming in Java 23 we need to move away from
Subject.doAs() but the replacement isn't available in Java 17. Hence use
JreCompat.

--- a/java/org/apache/tomcat/util/compat/LocalStrings.properties
+++ b/java/org/apache/tomcat/util/compat/LocalStrings.properties
@@ -16,6 +16,8 @@
 jre16Compat.javaPre16=Class not found so assuming code is running on a pre-Java 16 JVM
 jre16Compat.unexpected=Failed to create references to Java 16 classes and methods
 
+jre18Compat.javaPre18=Method not found so assuming code is running on a pre-Java 18 JVM
+
 jre19Compat.javaPre19=Class not found so assuming code is running on a pre-Java 19 JVM
 
 jre21Compat.javaPre21=Class not found so assuming code is running on a pre-Java 21 JVM
