--- a/build.xml
+++ b/build.xml
@@ -2066,6 +2066,9 @@
           <jvmarg value="${opens.sunrmi}"/>
           <jvmarg value="${opens.javautil}"/>
           <jvmarg value="${opens.javautilconcurrent}"/>
+          <!-- These are managed as jvmargs rather than sysproperty because the default varies by OS -->
+          <jvmarg value="${openssl.ffm.1}" />
+          <jvmarg value="${openssl.ffm.2}" />
 
           <classpath refid="tomcat.test.classpath" />
 
