Fix line-ending differences in src distributions

--- a/build.xml
+++ b/build.xml
@@ -3200,6 +3200,7 @@ Configured for ${release.asfusername} to release Tomcat ${version.major}.${versi
       <include name="bin/*.sh" />
       <include name=".travis/*.sh" />
       <include name="res/graal/*.sh" />
+      <include name="res/openssl/*.sh" />
     </fixcrlf>
 
     <zip zipfile="${tomcat.release}/v${version}/src/${final-src.name}.zip"
