--- a/conf/logging.properties
+++ b/conf/logging.properties
@@ -69,8 +69,8 @@ org.apache.catalina.core.ContainerBase.[Catalina].[localhost].[/host-manager].ha
 # each component that extends LifecycleBase changing state:
 #org.apache.catalina.util.LifecycleBase.level = FINE
 
-# To see debug messages in TldLocationsCache, uncomment the following line:
-#org.apache.jasper.compiler.TldLocationsCache.level = FINE
+# To see debug messages in TldCache, uncomment the following line:
+#org.apache.jasper.compiler.TldCache.level = FINE
 
 # To see debug messages for HTTP/2 handling, uncomment the following line:
 #org.apache.coyote.http2.level = FINE
