--- a/conf/logging.properties
+++ b/conf/logging.properties
@@ -22,31 +22,31 @@ handlers = 1catalina.org.apache.juli.AsyncFileHandler, 2localhost.org.apache.jul
 # Describes specific configuration info for Handlers.
 ############################################################
 
-1catalina.org.apache.juli.AsyncFileHandler.level = FINE
+1catalina.org.apache.juli.AsyncFileHandler.level = ALL
 1catalina.org.apache.juli.AsyncFileHandler.directory = ${catalina.base}/logs
 1catalina.org.apache.juli.AsyncFileHandler.prefix = catalina.
 1catalina.org.apache.juli.AsyncFileHandler.maxDays = 90
 1catalina.org.apache.juli.AsyncFileHandler.encoding = UTF-8
 
-2localhost.org.apache.juli.AsyncFileHandler.level = FINE
+2localhost.org.apache.juli.AsyncFileHandler.level = ALL
 2localhost.org.apache.juli.AsyncFileHandler.directory = ${catalina.base}/logs
 2localhost.org.apache.juli.AsyncFileHandler.prefix = localhost.
 2localhost.org.apache.juli.AsyncFileHandler.maxDays = 90
 2localhost.org.apache.juli.AsyncFileHandler.encoding = UTF-8
 
-3manager.org.apache.juli.AsyncFileHandler.level = FINE
+3manager.org.apache.juli.AsyncFileHandler.level = ALL
 3manager.org.apache.juli.AsyncFileHandler.directory = ${catalina.base}/logs
 3manager.org.apache.juli.AsyncFileHandler.prefix = manager.
 3manager.org.apache.juli.AsyncFileHandler.maxDays = 90
 3manager.org.apache.juli.AsyncFileHandler.encoding = UTF-8
 
-4host-manager.org.apache.juli.AsyncFileHandler.level = FINE
+4host-manager.org.apache.juli.AsyncFileHandler.level = ALL
 4host-manager.org.apache.juli.AsyncFileHandler.directory = ${catalina.base}/logs
 4host-manager.org.apache.juli.AsyncFileHandler.prefix = host-manager.
 4host-manager.org.apache.juli.AsyncFileHandler.maxDays = 90
 4host-manager.org.apache.juli.AsyncFileHandler.encoding = UTF-8
 
-java.util.logging.ConsoleHandler.level = FINE
+java.util.logging.ConsoleHandler.level = ALL
 java.util.logging.ConsoleHandler.formatter = org.apache.juli.OneLineFormatter
 java.util.logging.ConsoleHandler.encoding = UTF-8
 
