Add trace logging for receipt of WebSocket session close message

--- a/java/org/apache/tomcat/websocket/LocalStrings.properties
+++ b/java/org/apache/tomcat/websocket/LocalStrings.properties
@@ -118,6 +118,7 @@ wsSession.instanceCreateFailed=Endpoint instance creation failed
 wsSession.instanceNew=Endpoint instance registration failed
 wsSession.invalidHandlerTypePong=A pong message handler must implement MessageHandler.Whole
 wsSession.messageFailed=Unable to write the complete message as the WebSocket connection has been closed
+wsSession.onClose.entry=Close message with reason [{0}] received for session [{1}] in state [{2}]
 wsSession.removeHandlerFailed=Unable to remove the handler [{0}] as it was not registered with this session
 wsSession.sendCloseFail=Failed to send close message for session [{0}] to remote endpoint
 wsSession.timeout=The WebSocket session [{0}] idle timeout expired
