Update version numbers

--- a/modules/cxf/pom.xml
+++ b/modules/cxf/pom.xml
@@ -29,7 +29,7 @@
     <name>Apache CXF for Apache Tomcat CDI</name>
     <description>Apache CXF packaged for Apache Tomcat CDI</description>
     <!-- This is the Apache CXF version -->
-    <version>3.5.8</version>
+    <version>3.6.4</version>
     <packaging>jar</packaging>
 
     <properties>
@@ -97,8 +97,7 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <configuration>
-                    <source>1.8</source>
-                    <target>1.8</target>
+                    <release>11</release>
                 </configuration>
             </plugin>
             <plugin>
