Add noEqualsCookie option with unchanged default

--- a/java/org/apache/tomcat/util/http/LocalStrings.properties
+++ b/java/org/apache/tomcat/util/http/LocalStrings.properties
@@ -22,6 +22,8 @@ cookies.maxCountFail=More than the maximum allowed number of cookies, [{0}], wer
 
 headers.maxCountFail=More than the maximum allowed number of headers, [{0}], were detected.
 
+noEqualsCookie.invalid=The value [{0}] is not recognised
+
 parameters.bytes=Start processing with input [{0}]
 parameters.copyFail=Failed to create copy of original parameter values for debug logging purposes
 parameters.decodeFail.debug=Character decoding failed. Parameter [{0}] with value [{1}] has been ignored.
