Expected behaviour has been clarified when writing >= c-l bytes to body

--- a/java/org/apache/catalina/connector/LocalStrings.properties
+++ b/java/org/apache/catalina/connector/LocalStrings.properties
@@ -83,6 +83,7 @@ coyoteResponse.setBufferSize.ise=Cannot change buffer size after data has been w
 inputBuffer.requiresNonBlocking=Not available in non blocking mode
 inputBuffer.streamClosed=Stream closed
 
+outputBuffer.closed=The response may not be written to once it has been closed
 outputBuffer.writeNull=The String argument to write(String,int,int) may not be null
 
 request.asyncNotSupported=A filter or servlet of the current chain does not support asynchronous operations.
