--- a/java/org/apache/tomcat/util/http/LocalStrings.properties
+++ b/java/org/apache/tomcat/util/http/LocalStrings.properties
@@ -20,9 +20,9 @@ cookies.invalidSameSiteCookies=Unknown setting [{0}], must be one of: unset, non
 cookies.invalidSpecial=Cookies: Unknown Special Cookie
 cookies.maxCountFail=More than the maximum allowed number of cookies, [{0}], were detected.
 
-headers.maxCountFail=More than the maximum allowed number of headers, [{0}], were detected.
+cookiesWithoutEquals.invalid=The value [{0}] is not recognised
 
-noEqualsCookie.invalid=The value [{0}] is not recognised
+headers.maxCountFail=More than the maximum allowed number of headers, [{0}], were detected.
 
 parameters.bytes=Start processing with input [{0}]
 parameters.copyFail=Failed to create copy of original parameter values for debug logging purposes
