Rename i18n string after earlier refactoring

--- a/java/org/apache/coyote/http2/LocalStrings.properties
+++ b/java/org/apache/coyote/http2/LocalStrings.properties
@@ -85,7 +85,6 @@ http2Protocol.jmxRegistration.fail=JMX registration for the HTTP/2 protocol fail
 
 pingManager.roundTripTime=Connection [{0}] Round trip time measured as [{1}]ns
 
-stream.clientCancel=Client reset the stream before the response was complete
 stream.closed=Connection [{0}], Stream [{1}], Unable to write to stream once it has been closed
 stream.header.case=Connection [{0}], Stream [{1}], HTTP header name [{2}] must be in lower case
 stream.header.connection=Connection [{0}], Stream [{1}], HTTP header [{2}] is not permitted in an HTTP/2 request
@@ -129,6 +128,7 @@ streamStateMachine.invalidReset=Connection [{0}], Stream [{1}], Stream may not b
 
 upgradeHandler.allocate.debug=Connection [{0}], Stream [{1}], allocated [{2}] bytes
 upgradeHandler.allocate.left=Connection [{0}], Stream [{1}], [{2}] bytes unallocated - trying to allocate to children
+upgradeHandler.clientCancel=Client reset the stream before the response was complete
 upgradeHandler.connectionError=Connection error
 upgradeHandler.enableRfc7450Priorities=Connection [{0}], RFC 7450 priorities may not be enabled after being disabled in the initial connection settings frame (see RFC 9218)
 upgradeHandler.fallToDebug=\n\
