Fix BZ 69302 Client reset should trigger ReadListener.onError ...
... if the request body has not been fully read.

https://bz.apache.org/bugzilla/show_bug.cgi?id=69302

--- a/java/org/apache/coyote/http2/LocalStrings.properties
+++ b/java/org/apache/coyote/http2/LocalStrings.properties
@@ -85,6 +85,7 @@ http2Protocol.jmxRegistration.fail=JMX registration for the HTTP/2 protocol fail
 
 pingManager.roundTripTime=Connection [{0}] Round trip time measured as [{1}]ns
 
+stream.clientResetRequest=Client reset the stream before the request was fully read
 stream.closed=Connection [{0}], Stream [{1}], Unable to write to stream once it has been closed
 stream.header.case=Connection [{0}], Stream [{1}], HTTP header name [{2}] must be in lower case
 stream.header.connection=Connection [{0}], Stream [{1}], HTTP header [{2}] is not permitted in an HTTP/2 request
