PlantUML files are text files so fix the line endings

--- a/build.xml
+++ b/build.xml
@@ -360,6 +360,7 @@
     <include name="**/*.tasks"/>
     <include name="**/*.tld"/>
     <include name="**/*.txt"/>
+    <include name="**/*.uml"/>
     <include name="**/*.xhtml"/>
     <include name="**/*.xml"/>
     <include name="**/*.xsd"/>
