--- a/build.xml
+++ b/build.xml
@@ -342,6 +342,7 @@
     <include name="**/*.nsi"/>
     <include name="**/*.pem"/>
     <include name="**/*.pl"/>
+    <include name="**/*.plantuml"/>
     <include name="**/*.policy"/>
     <include name="**/*.pom"/>
     <include name="**/*.project"/>
@@ -356,7 +357,6 @@
     <include name="**/*.tasks"/>
     <include name="**/*.tld"/>
     <include name="**/*.txt"/>
-    <include name="**/*.uml"/>
     <include name="**/*.xhtml"/>
     <include name="**/*.xml"/>
     <include name="**/*.xsd"/>
