Remove secret init-param default value
Found by Coverity.

--- a/java/org/apache/catalina/servlets/LocalStrings.properties
+++ b/java/org/apache/catalina/servlets/LocalStrings.properties
@@ -56,3 +56,4 @@ directory.title=Directory Listing For [{0}]
 webdavservlet.externalEntityIgnored=The request included a reference to an external entity with PublicID [{0}] and SystemID [{1}] which was ignored
 webdavservlet.inputstreamclosefail=Failed to close the inputStream of [{0}]
 webdavservlet.jaxpfailed=JAXP initialization failed
+webdavservlet.noSecret=Generation of secure lock ids need a configured 'secret' init parameter on the Servlet
