Better comment and some trace level logging

--- a/java/org/apache/coyote/http2/LocalStrings.properties
+++ b/java/org/apache/coyote/http2/LocalStrings.properties
@@ -148,6 +148,8 @@ upgradeHandler.pruneIncomplete=Connection [{0}], Stream [{1}], Failed to fully p
 upgradeHandler.pruneStart=Connection [{0}] Starting pruning of old streams. Limit is [{1}] and there are currently [{2}] streams.
 upgradeHandler.pruned=Connection [{0}] Pruned completed stream [{1}]
 upgradeHandler.releaseBacklog=Connection [{0}], Stream [{1}] released from backlog
+upgradeHandler.replace.duplicate=Connection [{0}], Stream [{1}] duplicate attempt to replace stream with lightweight implementation has been ignored
+upgradeHandler.replace.first=Connection [{0}], Stream [{1}] replaced with lightweight stream implementation
 upgradeHandler.reset.receive=Connection [{0}], Stream [{1}], Reset received due to [{2}]
 upgradeHandler.rst.debug=Connection [{0}], Stream [{1}], Error [{2}], Message [{3}],  RST (closing stream)
 upgradeHandler.sendPrefaceFail=Connection [{0}], Failed to send preface to client
