BZ 69370: DefaultServlet's HTML listing uses incorrect labels

--- a/java/org/apache/catalina/servlets/LocalStrings.properties
+++ b/java/org/apache/catalina/servlets/LocalStrings.properties
@@ -43,18 +43,17 @@ cgiServlet.runStdErrFail=I/O problems with stderr
 defaultServlet.blockExternalEntity=Blocked access to external entity with publicId [{0}] and systemId [{0}]
 defaultServlet.blockExternalEntity2=Blocked access to external entity with name [{0}], publicId [{1}], baseURI [{2}] and systemId [{3}]
 defaultServlet.blockExternalSubset=Blocked access to external subset with name [{0}] and baseURI [{1}]
+defaultServlet.directory.parent=Up To [{0}]
+defaultServlet.directory.title=Directory Listing For [{0}]
 defaultServlet.missingResource=The requested resource [{0}] is not available
 defaultServlet.noResources=No static resources were found
 defaultServlet.readerCloseFailed=Failed to close reader
+defaultServlet.resource.lastModified=Last Modified
+defaultServlet.resource.name=Name
+defaultServlet.resource.size=Size
 defaultServlet.skipfail=Read failed because only [{0}] bytes were available but needed to skip [{1}] bytes to reach the start of the requested range
 defaultServlet.unknownBomConfig=Unrecognised value of [{0}] provided for useBomIfPresent initialization parameter
 defaultServlet.xslError=XSL transformer error
-
-directory.filename=Filename
-directory.lastModified=Last Modified
-directory.parent=Up To [{0}]
-directory.size=Size
-directory.title=Directory Listing For [{0}]
 
 webdavservlet.externalEntityIgnored=The request included a reference to an external entity with PublicID [{0}] and SystemID [{1}] which was ignored
 webdavservlet.inputstreamclosefail=Failed to close the inputStream of [{0}]
