--- a/java/org/apache/catalina/util/LocalStrings.properties
+++ b/java/org/apache/catalina/util/LocalStrings.properties
@@ -50,3 +50,4 @@ sessionIdGeneratorBase.randomAlgorithm=Exception initializing random number gene
 sessionIdGeneratorBase.randomProvider=Exception initializing random number generator using provider [{0}]
 
 timebucket.maintenance.error=Error processing periodic maintenance
+exactRateLimiter.maintenance.error=Error processing periodic maintenance
